1122服务端配置完成

--- a/daniu/templates/base.html
+++ b/daniu/templates/base.html
@@ -491,7 +491,10 @@
 
 <!--    版权信息-->
     <div class="foot-copyright">
-        <p class="foot-box">Copyright © 2013-2021 WWW.xx.COM. All Rights Reserved. xxx 版权所有　济南市xx科技有限公司　<a target="_blank" href="http://beian.miit.gov.cn">鲁ICP备xx号</a></p>
+        <p class="foot-box">Copyright © 2020-2022 WWW.LIUHU.ASIA. All Rights Reserved. |
+            <a target="_blank" href="http://www.liuhu.asia">关于我们</a>
+<!--            <a target="_blank" href="http://beian.miit.gov.cn">鲁ICP备xx号</a>-->
+        </p>
     </div>
     <style type="text/css">
         .foot-copyright {
