--- a/daniu_wechat/pages/sorts/sorts.wxss
+++ b/daniu_wechat/pages/sorts/sorts.wxss
@@ -24,12 +24,18 @@ page {
   border: 3rpx solid #faca82;
   box-shadow: 0 0 20rpx rgba(0, 0, 0.15);
   margin: 0 0 20rpx 0;
+  z-index: 999;
  }
 .item-two-img {
   /* width: 55%; */
-  width: 100%;
+  width: 90%;
   border-radius: 10px;
   /* margin: 2px; */
+  display: inline-block;
+  border: 4px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  transition: 0.3s;
 }
 .item-two-text {
   text-align: center;
@@ -105,7 +111,7 @@ page {
   height: 30px;
   border:1px solid #ccc;
   border-radius: 40px;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 .swiperClass {
   margin: 0;
