--- a/daniu_wechat/pages/categorylist/categorylist.wxml
+++ b/daniu_wechat/pages/categorylist/categorylist.wxml
@@ -1,3 +1,17 @@
+<!-- 滚动字幕 -->
+<view class="shortWords">
+  <!-- 上下滚动字幕 -->
+  <!-- <swiper class='swiperClas' vertical='ture' autoplay='ture' interval='4000' duration="100" previous-margin="0px" next-margin="0px" circular='ture'> -->
+  <!-- 左右滚动字幕 -->
+  <swiper autoplay='ture' interval="0" duration="3000" previous-margin="10px" next-margin="0px" circular='ture'>  <!-- bindchange="bindchange" -->
+    <block wx:for="{{label}}" wx:key="index">
+      <swiper-item>
+        <view class="wordSwiper" style="text-align: center;">{{label.Notice}}</view>
+      </swiper-item>
+    </block>
+  </swiper>
+</view>
+
 <wxs module="m1">
 var delHtmlTag = function(str) {
     var reg = getRegExp("<[^>]+>", "g");
@@ -9,23 +23,15 @@ var delHtmlTag = function(str) {
 <view class="var">
 </view>
 <view class="container-blog-view">
-    <swiper class='swiperClass' autoplay indicator-dots="{{indicatorDots}}" interval="2000" duration="1000" previous-margin="0px" next-margin="0px" circular bindchange="bindchange" style='height: {{swiperHeight}}px'>
-		    <block wx:for="{{imgUrls}}" wx:key="{{index}}">
+    <swiper class='swiperClass' autoplay indicator-dots="{{indicatorDots}}" interval="2000" duration="1000" previous-margin="0px" next-margin="0px" circular style='height: {{swiperHeight}}px'>
+		    <block wx:for="{{imgUrls}}" wx:key="index">
 		      <swiper-item>
 		        <image src="{{item}}" class="slide-image {{swiperIndex == index ? 'active' : 'quiet'}}" mode='aspectFill'>
 		        </image>
 		      </swiper-item>
 		    </block>
-      </swiper>
-<!-- <view class="shortWords">
-  <swiper class='swiperClas' vertical='ture' autoplay='ture' interval='3000' duration="50" previous-margin="0px" next-margin="0px" circular='ture'>
-    <block wx:for="{{wordsData}}" wx:key="{{index}}">
-      <swiper-item>
-        <view class="wordSwiper" style="text-align: center;">{{item.content}}</view>
-      </swiper-item>
-    </block>
-  </swiper>
-</view> -->
+    </swiper>
+
 <!--
 <view class='search'>
  <input type='text' 
@@ -38,18 +44,6 @@ var delHtmlTag = function(str) {
  </view>
 </view> -->
 
-<!-- <view class="fourImg">
-  <image wx:for='{{category}}' wx:key  wx:if="{{index<4}}" data-sid="{{item.id}}" data-sortname="分类目录" bindtap="toDetailPage" src="./images/1.png" mode='widthFix' class="desc-head-img">
-  <text class="item-two-text">{{item.name}}</text>
-  </image>
-  
-  <image data-sid="{{item.id}}" data-sortname="分类目录" bindtap="toDetailPage" src="./images/2.png" mode='widthFix' class="desc-head-img"></image>
-  <text class="item-two-text">{{item.name}}</text>>
-</view> -->
-<!-- <view class="twoImg">
-  <image data-sid="2" bindtap='newApp' data-index='weather' src="./images/zuo.png" mode='widthFix' class="desc-two-img"></image>
-  <image data-sid="2" bindtap='jumpTo' src="./images/you.png" mode='widthFix' class="desc-two-img"></image>
-</view> -->
 <scroll-view scroll-y="true" style="height:{{scrollHeight}}px">
   <view class="list">
     <block wx:for="{{adList}}" wx:key="id">
