--- a/daniu_wechat/pages/index/index.wxml
+++ b/daniu_wechat/pages/index/index.wxml
@@ -1,3 +1,16 @@
+<view class="shortWords">
+  <!-- 上下滚动字幕 -->
+  <!-- <swiper class='swiperClas' vertical='ture' autoplay='ture' interval='4000' duration="100" previous-margin="0px" next-margin="0px" circular='ture'> -->
+  <!-- 左右滚动字幕 -->
+  <swiper autoplay='ture' interval="0" duration="10000" previous-margin="10px" next-margin="0px" circular='ture'>
+    <block wx:for="{{label}}" wx:key="index">
+      <swiper-item>
+        <view class="wordSwiper" style="text-align: center;">{{label.Notice}}</view>
+      </swiper-item>
+    </block>
+  </swiper>
+</view>
+
 <wxs module="m1">
 var delHtmlTag = function(str) {
     var reg = getRegExp("<[^>]+>", "g");
@@ -6,40 +19,33 @@ var delHtmlTag = function(str) {
   }
   module.exports.delHtmlTag = delHtmlTag;
 </wxs>
+
 <view class="var">
 </view>
 <view class="container-blog-view">
-    <swiper class='swiperClass' autoplay indicator-dots="{{indicatorDots}}" interval="2000" duration="1000" previous-margin="0px" next-margin="0px" circular bindchange="bindchange" style='height: {{swiperHeight}}px'>
-		    <block wx:for="{{imgUrls}}" wx:key="{{index}}">
+    <swiper class='swiperClass' autoplay indicator-dots="{{indicatorDots}}" interval="2000" duration="1000" previous-margin="0px" next-margin="0px" circular  style='height: {{swiperHeight}}px'>
+		    <block wx:for="{{imgUrls}}" wx:key="index">
 		      <swiper-item>
 		        <image src="{{item}}" class="slide-image {{swiperIndex == index ? 'active' : 'quiet'}}" mode='aspectFill'>
 		        </image>
 		      </swiper-item>
 		    </block>
       </swiper>
-<view class="shortWords">
-  <swiper class='swiperClas' vertical='ture' autoplay='ture' interval='3000' duration="50" previous-margin="0px" next-margin="0px" circular='ture'>
-    <block wx:for="{{wordsData}}" wx:key="{{index}}">
-      <swiper-item>
-        <view class="wordSwiper" style="text-align: center;">{{item.content}}</view>
-      </swiper-item>
-    </block>
-  </swiper>
-</view>
-<!--
-<view class='search'>
- <input type='text' 
- placeholder='请输入您要搜索的内容'
- bindinput='input' 
- bindconfirm='confirm'/>
- <icon type='search' class='icons'></icon>
- <view wx:for="{{list}}" wx:key='' class='lists'>
- <text wx:if="{{item.show}}">{{item.name}}</text>
- </view>
+
+<!-- 搜索框功能 -->
+<!-- <view class='search'>
+  <input type='text' 
+  placeholder='请输入您要搜索的内容'
+  bindinput='input' 
+  bindconfirm='confirm'/>
+  <icon type='search' class='icons'></icon>
+  <view wx:for="{{adList}}" wx:key='' class='lists'>
+    <text wx:if="{{item.show}}">{{item.name}}</text>
+  </view>
 </view> -->
 
 <view class="fourImg">
-  <image wx:for='{{category}}' wx:key  wx:if="{{index<4}}" data-sid="{{item.id}}" data-sortname="分类目录" bindtap="toCategorylistPage" src="../../static/images/1.png" mode='widthFix' class="desc-head-img">
+  <image wx:for='{{category}}' wx:key="index"  wx:if="{{index<4}}" data-sid="{{item.id}}" data-sortname="分类目录" bindtap="toCategorylistPage" src="../../static/images/1.png" mode='widthFix' class="desc-head-img">
   <!-- <text class="item-two-text">{{item.name}}</text> -->
   </image>
   
