小程序接入公众号API

--- a/daniu/templates/base.html
+++ b/daniu/templates/base.html
@@ -348,7 +348,10 @@
                     <header id="masthead" class="site-header" role="banner">
                         <div class="hgroup">
                             <h1 class="site-title display-title"><a href="" title="达牛帮帮你" rel="home"><span itemprop="name">达牛帮帮你</span></a></h1>
-                            <h2 itemprop="description" class="site-description">www.dnbbn.com</h2>
+                            <h2 itemprop="description" class="site-description">www.liuhu.com</h2>
+                            <marquee direction="left" scrolldelay="80" scrollamount="4" onmouseover="this.stop();" onmouseout="this.start();">
+                                <h5><a href="other.html">系统公告</a></h5>
+                            </marquee>
                         </div>
                         <button type="button" class="btn btn-link hidden-lg toggle-sidebar" data-toggle="offcanvas" aria-label="Sidebar"><i class="fa fa-gear"></i></button>
                         <button type="button" class="btn btn-link hidden-lg toggle-navigation" aria-label="Navigation Menu"><i class="fa fa-bars"></i></button>
